fix: scrollbar overlaps block editor toolbar
- lower z-index of scrollbar from 100 to 10

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -112,7 +112,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 100;
+	z-index: 10;
 }
 
 .slide__scrollbar-inner {
